--- a/resources/css/admin/dashboard.css
+++ b/resources/css/admin/dashboard.css
@@ -171,9 +171,12 @@
 
 #platformChart,
 #browserChart,
-#geoChart {
+#geoChart,
+#activityDaysChart, 
+#activityTimeChart {
     max-height: 300px;
     max-width: 100%;
+    height: 100% !important;
 }
 
 .chart-last-container h3 {
